+ вспомогательные функции для работы с мили-timestamp и time_base

--- a/ffcairo/Makefile.in
+++ b/ffcairo/Makefile.in
@@ -82,6 +82,7 @@ LIBOBJECTS+=obj/avc_agent.o
 LIBOBJECTS+=obj/avc_http.o
 LIBOBJECTS+=obj/avc_scene.o
 LIBOBJECTS+=obj/avc_feedagent.o
+LIBOBJECTS+=obj/avc_time.o
 
 ############################# GENERIC RULES ##################################
 
@@ -211,6 +212,9 @@ obj/avc_scene.o: ffcairo/avc_scene.cpp ffcairo/avc_scene.h
 
 obj/avc_feedagent.o: ffcairo/avc_feedagent.cpp ffcairo/avc_feedagent.h
 	$(CXX) -c ffcairo/avc_feedagent.cpp -o obj/avc_feedagent.o
+
+obj/avc_time.o: ffcairo/avc_time.cpp ffcairo/avc_time.h
+	$(CXX) -c ffcairo/avc_time.cpp -o obj/avc_time.o
 
 ########################### CLEAN RULES ######################################
 
