--- a/libnano2/nanosoft/config.h.in
+++ b/libnano2/nanosoft/config.h.in
@@ -5,10 +5,12 @@
 #undef UNIX
 #undef WINDOWS
 
+#define BLOCKSPOOL_BLOCK_SIZE 4096
+
 /**
 * Размер блока файлового буфера
 */
-#define FDBUFFER_BLOCK_SIZE 1024
+#define FDBUFFER_BLOCK_SIZE BLOCKSPOOL_BLOCK_SIZE
 
 /**
 * Размер файлового буфера в блоках
