константа FDBUFFER_BLOCK_SIZE устарела, используйте BLOCKSPOOL_BLOCK_SIZE

--- a/libnano2/nanosoft/config.h.in
+++ b/libnano2/nanosoft/config.h.in
@@ -5,10 +5,15 @@
 #undef UNIX
 #undef WINDOWS
 
+/**
+* Размер блоков для пула BlocksPool
+*/
 #define BLOCKSPOOL_BLOCK_SIZE 4096
 
 /**
 * Размер блока файлового буфера
+*
+* Устаревшая константа, используйте BLOCKSPOOL_BLOCK_SIZE
 */
 #define FDBUFFER_BLOCK_SIZE BLOCKSPOOL_BLOCK_SIZE
 
