+ класс BufferStream, буферизирующий поток для отложенного чтения данных, основан на коде NetDaemon

--- a/libnano2/Makefile.in
+++ b/libnano2/Makefile.in
@@ -78,8 +78,10 @@ LIBOBJECTS+=obj/xml_types.o
 LIBOBJECTS+=obj/xmlparser.o
 LIBOBJECTS+=obj/xmlwriter.o
 LIBOBJECTS+=obj/attagparser.o
+LIBOBJECTS+=obj/bufferstream.o
 
 TESTS+=test01_blockspool
+TESTS+=test02_bufferstream
 
 ############################# GENERIC RULES ##################################
 
@@ -95,6 +97,9 @@ test: $(TESTS)
 test01_blockspool: libnano2.a test01_blockspool.cpp
 	gcc -o test01_blockspool test01_blockspool.cpp -L. -I. -lstdc++ -lnano2
 	
+test02_bufferstream: libnano2.a test02_bufferstream.cpp
+	gcc -o test02_bufferstream test02_bufferstream.cpp -L. -I. -lstdc++ -lnano2
+
 # установка файлов
 # примечение: будем отходить от этой практике, рекомендуется создавать пакет
 # и устанавливать через менеджер пакетов.
@@ -207,6 +212,9 @@ obj/xmlparser.o: nanosoft/xmlparser.cpp nanosoft/xmlparser.h
 
 obj/xmlwriter.o: nanosoft/xmlwriter.cpp nanosoft/xmlwriter.h
 	$(CXX) -c nanosoft/xmlwriter.cpp -o obj/xmlwriter.o
+
+obj/bufferstream.o: nanosoft/bufferstream.cpp nanosoft/bufferstream.h nanosoft/stream.h
+	$(CXX) -c nanosoft/bufferstream.cpp -o obj/bufferstream.o
 
 ########################### CLEAN RULES ######################################
 
